crates/gossamer-diagnostics/tests/snapshots/GT0043.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
assertion_line: 86
expression: rendered
---
--- plain ---
error[GT0043]: A second named mutable reference would overlap an active `&mut` binding. - here
--- framed ---
error[GT0043]: A second named mutable reference would overlap an active `&mut` binding.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
