crates/gossamer-diagnostics/tests/snapshots/GT0044.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0044]: A generic function's return type parameter could not be inferred from - here
--- framed ---
error[GT0044]: A generic function's return type parameter could not be inferred from
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
