crates/gossamer-diagnostics/tests/snapshots/GT0047.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0047]: A plain `let` used an irrefutable assignment position with a literal or - here
--- framed ---
error[GT0047]: A plain `let` used an irrefutable assignment position with a literal or
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
