crates/gossamer-diagnostics/tests/snapshots/GT0052.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0052]: A reference would escape the lexical storage boundary that keeps its - here
--- framed ---
error[GT0052]: A reference would escape the lexical storage boundary that keeps its
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
